tests/codegen/fail/unsupported_async_for_await_library_build.ql
async fn helper() -> Int {
    for await value in [1, 2, 3] {
        break
    }
    return 0
}
