tests/codegen/fail/unsupported_async_for_await_library_build.stderr
error: tests/codegen/fail/unsupported_async_for_await_library_build.ql:2:5: LLVM IR backend foundation does not support `for await` lowering yet
      for await value in [1, 2, 3] {
      ^^^^^^^^
error: tests/codegen/fail/unsupported_async_for_await_library_build.ql:1:7: LLVM IR backend foundation does not support `async fn` yet
  async fn helper() -> Int {
        ^^^^^^^^
